<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz App</string>
    <string name="instruction">Choose the best answer!</string>
    <string name="one">1. The United States Financial Center is in ...</string>
    <string name="two">2. Here is a country traversed by the Alps Mountain, except ...</string>
    <string name="three">3. Here is the programming language used in Android Studio ...</string>
    <string name="four">4. Jakarta is the capital city of the country ...</string>
    <string name="five">5. World Peace Day by the Roman Catholic church is commemorated every date ...</string>
    <string name="one_a">New York</string>
    <string name="one_b">Washington DC</string>
    <string name="one_c">Chicago</string>
    <string name="two_a">Austria</string>
    <string name="two_b">Liechtenstein</string>
    <string name="two_c">Hungaria</string>
    <string name="three_a">Asia</string>
    <string name="three_b">Europe</string>
    <string name="three_c">Africa</string>
    <string name="four_a">Lebanon</string>
    <string name="four_b">Bahrain</string>
    <string name="four_c">Turkey</string>
    <string name="five_a">1 January</string>
    <string name="five_b">1 February</string>
    <string name="five_c">1 March</string>
    <string name="toast_one">You have not filled out the answer for number 1!</string>
    <string name="toast_two">You have not filled out the answer for number 2!</string>
    <string name="toast_three">You have not filled out the answer for number 3!</string>
    <string name="toast_four">You have not filled out the answer for number 4!</string>
    <string name="toast_five">You have not filled out the answer for number 5!</string>
    <string name="result_totalCorrect">Correct: </string>
    <string name="result_totalIncorrect">Incorrect: </string>
    <string name="result_score">Score: </string>
    <string name="result_toast">Congrats! Your total score is </string>
    <string name="submit">Submit Answer</string>
    <string name="reset">Reset</string>
</resources>
