<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <TextView
                style="@style/Instruction"
                android:text="@string/instruction"
                android:textColor="@color/colorPrimaryText" />


            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/one"
                android:textColor="@color/colorPrimaryText" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/key_1"
                    style="@style/RadioButtonStyle"
                    android:text="@string/one_a" />

                <RadioButton
                    android:id="@+id/notKey_1a"
                    style="@style/RadioButtonStyle"
                    android:text="@string/one_b" />

                <RadioButton
                    android:id="@+id/notKey_1b"
                    style="@style/RadioButtonStyle"
                    android:text="@string/one_c" />
            </RadioGroup>

            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/two"
                android:textColor="@color/colorPrimaryText" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/notKey_2a"
                    style="@style/RadioButtonStyle"
                    android:text="@string/two_a" />

                <RadioButton
                    android:id="@+id/notKey_2b"
                    style="@style/RadioButtonStyle"
                    android:text="@string/two_b" />

                <RadioButton
                    android:id="@+id/key_2"
                    style="@style/RadioButtonStyle"
                    android:text="@string/two_c" />
            </RadioGroup>

            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/three"
                android:textColor="@color/colorPrimaryText" />


            <CheckBox
                android:id="@+id/notKey_3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C++" />

            <CheckBox
                android:id="@+id/key_3a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java" />

            <CheckBox
                android:id="@+id/key_3b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kotlin" />

            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextViewStyle"
                    android:text="@string/four"
                    android:textColor="@color/colorPrimaryText" />

                <EditText
                    android:id="@+id/key_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="Answer"
                    android:inputType="text"
                    android:text="" />
            </LinearLayout>

            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <TextView
                style="@style/TextViewStyle"
                android:text="@string/five"
                android:textColor="@color/colorPrimaryText" />

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/key_5"
                    style="@style/RadioButtonStyle"
                    android:text="@string/five_a" />

                <RadioButton
                    android:id="@+id/notKey_5a"
                    style="@style/RadioButtonStyle"
                    android:text="@string/five_b" />

                <RadioButton
                    android:id="@+id/notKey_5b"
                    style="@style/RadioButtonStyle"
                    android:text="@string/five_c" />
            </RadioGroup>

            <View
                style="@style/LineStyle"
                android:background="@color/colorDivider" />

            <TextView
                android:id="@+id/result"
                style="@style/ResultStyle"
                android:text="\n"
                android:textColor="@color/colorPrimaryText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="submitAnswer"
                    android:text="@string/submit" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:onClick="reset"
                    android:text="@string/reset" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>